hphp/hack/test/typecheck/disallow_php_arrays/tconsts.php.like_types.exp
File "tconsts.php", line 10, characters 28-43:
Invalid type (Typing[4322])
File "tconsts.php", line 9, characters 5-23:
This type constant has the __DisallowPHPArrays attribute
File "tconsts.php", line 10, characters 32-42:
But a PHP array was found here
File "tconsts.php", line 20, characters 13-13:
Class D does not correctly implement all required members  (Typing[4322])
File "tconsts.php", line 20, characters 23-23:
Some members are incompatible with those declared in type C
Read the following to see why:
File "tconsts.php", line 21, characters 19-36:
Invalid type
File "tconsts.php", line 6, characters 5-23:
This type constant has the __DisallowPHPArrays attribute
File "tconsts.php", line 21, characters 25-35:
But a PHP array was found here
File "tconsts.php", line 21, characters 19-36:
Invalid type (Typing[4322])
File "tconsts.php", line 6, characters 5-23:
This type constant has the __DisallowPHPArrays attribute
File "tconsts.php", line 21, characters 25-35:
But a PHP array was found here
File "tconsts.php", line 27, characters 29-31:
Invalid constraint (Typing[4322])
File "tconsts.php", line 26, characters 5-23:
This type constant has the __DisallowPHPArrays attribute
File "tconsts.php", line 3, characters 12-32:
But a PHP array was found here
